     removal of deprecated methods.

-Embedded server:
    -XML escaping has been fixed, this could cause invalid XML documents
     to be returned
    -new config file option 'maxWorkQueueSize' that lets you set the maximum
     size of the request queue - if it gets larger than this, requests will
     be rejected (503 Service unavailable)

-GUI:
    -The stand-alone GUI can now take a plain text file as an argument, this
     file will then be loaded on startup (Github issue #232).

-Command-line:
    -It is now possible to add an external rule file when calling LanguageTool from the
     command line. Use --rulefile <file> to add a file. If the file name has a format
     that contains a language name, it will be used alongside other rules; otherwise,
     it will replace the rules. You can also load external file with false friends by
     using the option --falsefriends <file>. The file name should be an absolute file
     path, and false friend files are always added to the ones that are loaded for the
     language. This fixes github issue #192.

-Rule syntax:
    -A rule may now have a single example sentence as long as it has a 'correction'
     attribute - this can save some redundancy if the only correct sentence is the
     same as the incorrect sentence with the correction applied. Before, a rule
     needed at least two example sentences.
    -'example' element: type="incorrect" is now optional if there's a 'correction'
     attribute. The 'correction' attribute implies that the sentence is incorrect.
    -'example' element: type="correct" is now optional. No 'type' attribute and
     no 'correction' attribute implies that the sentence is correct.

-Internal:
    -We have switched from Apache Tika to language-detector
     (https://github.com/optimaize/language-detector) for automatically
     identifying the text language. It should be faster and results
     should be more reliable.