@@ -81,6 +81,10 @@ LanguageTool Change Log
     -new config file option 'maxWorkQueueSize' that lets you set the maximum
      size of the request queue - if it gets larger than this, requests will
      be rejected (503 Service unavailable)
+    -The server now responds with more specific HTTP status codes to these
+     error conditions:
+     413 Request Entity Too Large - if text exceeds maximum text size
+     503 Service Unavailable - if check exceeds maximum check time
 
 -GUI:
     -The stand-alone GUI can now take a plain text file as an argument, this
